# Musify

./: CMakeLists.txt  Doxyfile  README.md
docs/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_lista-members.html  class_lista.html  class_lista.js  class_musica-members.html  class_musica.html  class_musica.js  class_no-members.html  class_no.html  class_no.js  class_playlist-members.html  class_playlist.html  class_playlist.js  class_playlist__coll__graph.map  class_playlist__coll__graph.md5  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  graph_legend.md5  index.html  interface_8cpp.html  interface_8cpp.js  interface_8cpp__incl.map  interface_8cpp__incl.md5  interface_8cpp_source.html  interface_8hpp.html  (+49 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+13 more)
include/: interface.hpp  lista.hpp  musica.hpp  no.hpp  playlist.hpp
src/: interface.cpp  main.cpp  musica.cpp  playlist.cpp
